Implementação de generico rest e services de login e usuario.

--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -31,12 +31,12 @@
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">MENU DE NAVEGAÇÃO</li>
       <li class="treeview">
-        <a routerLink="dashboard">
+        <a routerLink="/dashboard">
           <i class="fa fa-dashboard"></i>
           <span>Dashboard</span>
         </a>
       </li>
-      <li class="treeview">
+      <!-- <li class="treeview">
         <a href="javascript:;">
           <i class="fa fa-th"></i>
           <span>Administrativo</span>
@@ -75,26 +75,20 @@
             </ul>
           </li>
         </ul>
-      </li>
+      </li> -->
       <li class="treeview">
         <a href="javascript:;">
           <i class="fa fa-th"></i>
-          <span>Financeiro</span>
+          <span>Segurança</span>
           <span class="pull-right-container">
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </a>
         <ul class="treeview-menu">
           <li>
-            <a routerLink="banco/lista">
+            <a routerLink="/usuario">
               <i class="fa fa-server"></i>
-              Banco
-            </a>
-          </li>
-          <li>
-            <a routerLink="conta/lista">
-              <i class="fa fa-server"></i>
-              Conta
+              Usuário
             </a>
           </li>
         </ul>
