--- a/src/app/components/_seguranca/login/login.component.html
+++ b/src/app/components/_seguranca/login/login.component.html
@@ -1,31 +1,36 @@
 <div class="login-box">
   <div class="login-logo">
     <a>
-      <b>Admin</b>LTE</a>
+      <b>Admin</b>
+      LTE
+    </a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg text-uppercase">Entre com suas credenciais</p>
     <form #formLogin="ngForm">
       <div class="form-group has-feedback">
-        <input type="email" name="email" class="form-control" placeholder="Email" [(ngModel)]="login.email" required>
+        <input type="email" name="email" class="form-control" placeholder="Email" [(ngModel)]="login.email" required />
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" name="senha" class="form-control" placeholder="Senha" [(ngModel)]="login.senha" required>
+        <input
+          type="password"
+          name="senha"
+          class="form-control"
+          placeholder="Senha"
+          [(ngModel)]="login.senha"
+          required
+        />
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
         <div class="col-xs-4">
-          <button class="btn btn-primary btn-block btn-flat" (click)="entrar(login)" [disabled]="!formLogin.form.valid">Entrar</button>
+          <button class="btn btn-primary btn-block btn-flat" (click)="entrar(login)" [disabled]="!formLogin.form.valid">
+            Entrar
+          </button>
         </div>
       </div>
     </form>
-  </div>
-  <!-- /.login-box-body -->
-  <div class="alert alert-warning alert-dismissible" *ngIf="!autenticado">
-    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-    <h4><i class="icon fa fa-warning"></i> Alert!</h4>
-    Login ou Senha inválidos!
   </div>
 </div>
