Implementado login service, modificado a rota e criado componente de not found.

--- a/src/app/components/_seguranca/login/login.component.html
+++ b/src/app/components/_seguranca/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login-box">
   <div class="login-logo">
     <a>
-      <b>Admin</b>
-      LTE
+      <b>Strong</b>
+      SYS
     </a>
   </div>
   <!-- /.login-logo -->
