--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -3,13 +3,13 @@
   <a href="index2.html" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini">
-      <b>A</b>
-      LT
+      <b>S</b>
+      SY
     </span>
     <!-- logo for regular state and mobile devices -->
     <span class="logo-lg">
-      <b>Admin</b>
-      LTE
+      <b>Strong</b>
+      SYS
     </span>
   </a>
 
@@ -24,16 +24,16 @@
       <ul class="nav navbar-nav">
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="assets/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
-            <span class="hidden-xs">Alexander Pierce</span>
+            <img src="assets/img/jaime.png" class="user-image" alt="User Image" />
+            <span class="hidden-xs">{{ usuario }}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              <img src="assets/img/jaime.png" class="img-circle" alt="User Image" />
               <p>
-                Alexander Pierce - Web Developer
-                <small>Member since Nov. 2012</small>
+                {{ usuario }} - Web Developer
+                <small>Member since Ago. 2014</small>
               </p>
             </li>
             <!-- Menu Footer-->
