--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -5,13 +5,13 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+        <img src="assets/img/jaime.png" class="img-circle" alt="User Image" />
       </div>
       <div class="pull-left info">
-        <p>Alexander Pierce</p>
+        <p>{{ usuario }}</p>
         <a href="javascript:;">
-          <i class="fa fa-circle text-success"></i>
-          Online
+          <i class="fa fa-user"></i>
+          Web Developer
         </a>
       </div>
     </div>
