Modificado os endpoints.

--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -86,7 +86,7 @@
         </a>
         <ul class="treeview-menu">
           <li>
-            <a routerLink="/usuario">
+            <a routerLink="/seguranca/usuario">
               <i class="fa fa-server"></i>
               Usuário
             </a>
