--- a/src/app/components/_seguranca/usuario/usuario.component.html
+++ b/src/app/components/_seguranca/usuario/usuario.component.html
@@ -1,3 +1,12 @@
-<p>
-  usuario works!
-</p>
+<section class="content-header">
+  <h1>
+    Usuário
+    <small>Listagem</small>
+  </h1>
+  <ol class="breadcrumb">
+    <li>
+      <a href="#"> <i class="fa fa-dashboard"></i> Home</a>
+    </li>
+    <li class="active">Lista</li>
+  </ol>
+</section>
