--- a/src/app/components/_seguranca/usuario/usuario.component.html
+++ b/src/app/components/_seguranca/usuario/usuario.component.html
@@ -10,3 +10,51 @@
     <li class="active">Lista</li>
   </ol>
 </section>
+<br />
+<div>
+  <button mat-raised-button color="primary">
+    Novo
+  </button>
+</div>
+<br />
+
+<mat-form-field>
+  <input matInput (keyup)="aplicarFiltro($event.target.value)" placeholder="Filtro" />
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- Nome Column -->
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+      <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
+    </ng-container>
+
+    <!-- Email Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+      <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+    </ng-container>
+
+    <!-- Editar Column -->
+    <ng-container matColumnDef="editar">
+      <th mat-header-cell *matHeaderCellDef>Editar</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-raised-button><mat-icon>edit</mat-icon></button>
+      </td>
+    </ng-container>
+
+    <!-- Excluir Column -->
+    <ng-container matColumnDef="excluir">
+      <th mat-header-cell *matHeaderCellDef>Excluir</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-raised-button color="warn" (click)="excluir(row.id)"><mat-icon>delete_outline</mat-icon></button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
