Criado componente usuario form, modificado a rota para acessar o componete e modificado o tema do angular material.

--- a/src/app/components/_seguranca/usuario/usuario.component.html
+++ b/src/app/components/_seguranca/usuario/usuario.component.html
@@ -12,7 +12,7 @@
 </section>
 <br />
 <div>
-  <button mat-raised-button color="primary">
+  <button mat-raised-button color="primary" [routerLink]="['/seguranca/usuario/form']">
     Novo
   </button>
 </div>
