--- a/src/app/components/_seguranca/usuario/usuario.component.html
+++ b/src/app/components/_seguranca/usuario/usuario.component.html
@@ -35,7 +35,7 @@
     <ng-container matColumnDef="editar">
       <th mat-header-cell *matHeaderCellDef>Editar</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-raised-button>
+        <button mat-raised-button [routerLink]="['/seguranca/usuario/editar', row.id]">
           <mat-icon>edit</mat-icon>
         </button>
       </td>
