refator: Modificado sidebar, breadcrumb e tela de usuario.

--- a/src/app/components/_seguranca/usuario/usuario.component.html
+++ b/src/app/components/_seguranca/usuario/usuario.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [principal]="'Usuário'" [pequeno]="'Listagem'" [form]="'Lista'"></app-breadcrumb>
+<app-breadcrumb [principal]="'Usuário'"></app-breadcrumb>
 
 <div class="text-right">
   <button
