--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -79,6 +79,23 @@
       <li class="treeview">
         <a href="javascript:;">
           <i class="fa fa-th"></i>
+          <span>Financeiro</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+          <li>
+            <a routerLink="/financeiro/banco">
+              <i class="fa fa-server"></i>
+              Banco
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="treeview">
+        <a href="javascript:;">
+          <i class="fa fa-th"></i>
           <span>Segurança</span>
           <span class="pull-right-container">
             <i class="fa fa-angle-left pull-right"></i>
