chore: Centralizando css para tables e inputs.

--- a/src/app/components/_financeiro/banco/banco-form.component.html
+++ b/src/app/components/_financeiro/banco/banco-form.component.html
@@ -3,19 +3,19 @@
 <form #formLogin="ngForm">
   <div class="row">
     <div class="col-md-2">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="text" name="codigo" placeholder="Código" [(ngModel)]="banco.codigo" required />
       </mat-form-field>
     </div>
 
     <div class="col-md-6">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="text" name="nome" placeholder="Nome" [(ngModel)]="banco.nome" required />
       </mat-form-field>
     </div>
 
     <div class="col-md-4">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="text" name="site" placeholder="Site" [(ngModel)]="banco.site" />
       </mat-form-field>
     </div>
