--- a/src/app/components/_seguranca/usuario/usuario-form.component.html
+++ b/src/app/components/_seguranca/usuario/usuario-form.component.html
@@ -3,20 +3,20 @@
 <form #formLogin="ngForm">
   <div class="row">
     <div class="col-md-6">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="text" name="nome" placeholder="Nome" [(ngModel)]="usuario.nome" required />
       </mat-form-field>
     </div>
 
     <div class="col-md-6">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="text" name="email" placeholder="Email" [(ngModel)]="usuario.email" required />
       </mat-form-field>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <mat-form-field style="width: 100%">
+      <mat-form-field>
         <input matInput type="password" name="password" placeholder="Senha" [(ngModel)]="usuario.password" required />
       </mat-form-field>
     </div>
