--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+/* Ajustes da table */
+table {
+  width: 100%;
+}
+
+td,
+th {
+  width: auto;
+}
+
+/* Ajustes do tamanho do input */
+.mat-form-field {
+  width: 100%;
+}
+
+/*Ajustes da margem dos botões*/
 .margin-button-row button,
 .margin-button-row a {
   margin-right: 8px;
