refator: Implementado componente de conta.

--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -91,6 +91,12 @@
               Banco
             </a>
           </li>
+          <li>
+            <a routerLink="/financeiro/conta">
+              <i class="fa fa-server"></i>
+              Conta
+            </a>
+          </li>
         </ul>
       </li>
       <li class="treeview">
